@@ -14,7 +14,7 @@ the IdP to tell you what the EntityID is.</i>
 
 Entity ID of this SP (click on the link to fetch the SP metadata): <a href="!!EID">!!EID</a>
 
-!!IDP_LIST
+<p>!!IDP_LIST
 
 <h3>Technical options</h3>
 
