@@ -69,7 +69,7 @@ Many other components of TAS3 are available in open source as well.
 
 <li><a href="sampo-tas3-arch-servicewave-stockholm-slides-2009.pdf">Sampo's architecture presentation at ServiceWave 2009, Stockholm</a> (sampo-tas3-arch-servicewave-stockholm-slides-2009.pdf)
 
-<li><a href="sampo-tas3-buda-slides-2009.pdf">TAS3 Imprementation Slides from Budapest</a> (sampo-tas3-buda-slides-2009.pdf)
+<li><a href="sampo-tas3-buda-slides-2009.pdf">TAS3 Implementation Slides from Budapest</a> (sampo-tas3-buda-slides-2009.pdf)
 
 <li><a href="sampo-tas3-zxid-misc2010-lon-slides.pdf">Sampo's SAML2 SSO TAS3 ZXID Slides at MISC 2010, London</a> (sampo-tas3-zxid-misc2010-lon-slides.pdf)
 
