@@ -60,17 +60,29 @@ binary. You need to register the domain name and obtain certificate
 for it, unless you are willing to use the self signed certificates
 that ZXID generates. This tutorial assumes you chose following URL
 
-  https://idp.your-org.com/zxididp
+  https://idp.example.com/zxididp
+
+> N.B. Prior to version 1.10 (early 2012) zxididp would
+> use /var/zxid/idp as default ~PATH~ and /var/zxid/idpzxid/conf
+> as default configuration file. Since implementation of ~VPATH~
+> and ~VURL~ this is no longer supported. We recommend either using
+> virtual hosting - with ~PATH~ ending up something like
+> /var/zxid/idp.example.com:8443/ and configuration file in
+> /var/zxid/idp.example.com:8443/zxid.conf - or deploying the
+> IdP as sole application on its server and using nonvirtual
+> PATH=/var/zxid/ and configuration file at /var/zxid/zxid.conf.
+> The rest of this chapter assumes the latter approach.
 
 4.1.1 Directories and Config File for IdP
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-  sudo ./zxmkdirs.sh /var/zxid/idp
-  sudoedit /var/zxid/idpzxid.conf
+  sudo ./zxmkdirs.sh /var/zxid/
+  sudoedit /var/zxid/zxid.conf
   NICE_NAME=Your IdP Name for End Users to See
   ORG_NAME=Your org
-  ORG_URL=http://your-org.com/
-  URL=https://idp.your-org.com/zxididp
+  ORG_URL=http://example.com/
+  BUTTON_URL=/example-saml2_icon_150x60.png
+  URL=https://idp.example.com/zxididp
   IDP_ENA=1
   AS_ENA=1
 
@@ -82,18 +94,18 @@ it.  We assume you have the certificate in file cert.pem and the
 private key in priv.pem.
 
   sudo su
-  cat cert.pem priv.pem >/var/zxid/idppem/ssl-nopw-cert.pem  # put both in one file
-  cp /var/zxid/idppem/ssl-nopw-cert.pem /var/zxid/idppem/sign-nopw-cert.pem
-  cp /var/zxid/idppem/ssl-nopw-cert.pem /var/zxid/idppem/enc-nopw-cert.pem
-  cp /var/zxid/idppem/ssl-nopw-cert.pem /var/zxid/idppem/logenc-nopw-cert.pem
-  cp /var/zxid/idppem/ssl-nopw-cert.pem /var/zxid/idppem/logsign-nopw-cert.pem
-  chmod 600 /var/zxid/idppem/*
+  cat cert.pem priv.pem >/var/zxid/pem/ssl-nopw-cert.pem  # put both in one file
+  cp /var/zxid/pem/ssl-nopw-cert.pem /var/zxid/pem/sign-nopw-cert.pem
+  cp /var/zxid/pem/ssl-nopw-cert.pem /var/zxid/pem/enc-nopw-cert.pem
+  cp /var/zxid/pem/ssl-nopw-cert.pem /var/zxid/pem/logenc-nopw-cert.pem
+  cp /var/zxid/pem/ssl-nopw-cert.pem /var/zxid/pem/logsign-nopw-cert.pem
+  chmod 600 /var/zxid/pem/*
   # end su
 
 4.1.3 Install GUI templates and stylesheets
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-  cd zxid-1.02
+  cd zxid-1.10
   sudo mkdir /var/zxid/webroot
   sudo mv *.html *.css /var/zxid/webroot
   sudo cp zxididp /var/zxid/webroot
@@ -102,11 +114,11 @@ private key in priv.pem.
 ~~~~~~~~~~~~~~~~~~~~~~~
 
 Metadata exchange introduces SAML SP to SAML IdP. Among other
-things the certificates are exchaged and trust relationship
+things, the certificates are exchaged and trust relationship
 is formed. ZXID supports fully automatic metadata exchage ("Auto-Cot"),
-see MD_FETCH=0 config option. Here we show how to exchange metadata manually.
+see MD_FETCH=1 config option. Here we show how to exchange metadata manually.
 
-Generate our own metadata for exportation to SP
+Generate our own metadata for exporting to SP
 
   sudo zxcot -ci -m >idp-meta.xml
 
@@ -134,13 +146,13 @@ Then to import it to IdP, run
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
   head /dev/urandom | sudo /usr/local/bin/zxpasswd -n .all  # dummy user to represent commonality
-  sudo /usr/local/bin/zxpasswd -at 'cn: Nomen Nescitur$email: nn@your-org.com$o: Your Org' -c nn
+  sudo /usr/local/bin/zxpasswd -at 'cn: Nomen Nescitur$email: nn@your-org.com$o: Your Org' -n nn
   # Password will be asked on console
 
 4.1.6 Add Discovery Bootstrap
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-  zxcot -e https://idp.your-org.com/zxididp?o=S 'TAS3 Default Discovery Service (ID-WSF 2.0)' https://idp.yuor-org.com/zxididp?o=B urn:liberty:disco:2006-08 | zxcot -bs
+  zxcot -e https://idp.example.com/zxididp?o=S 'TAS3 Default Discovery Service (ID-WSF 2.0)' https://idp.example.com/zxididp?o=B urn:liberty:disco:2006-08 | zxcot -bs
 
 4.1.7 Add Other Web Services
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -160,20 +172,20 @@ By design the idp will not start automatically after reboot. Operator
 intervention is required to supply the password for the encrypted
 filesystem.
 
-sudoedit /etc/idp-start
-#!/bin/sh
-# 20110618, sampo@zxid.org
-modprobe fuse
-/usr/local/bin/encfs /var/.zxid /var/zxid     # you will need to supply password manually
-cd /var/zxid/webroot
-/usr/local/bin/mini_httpd -u root -p 443 -c 'zxid*' -S -E /var/zxid/idppem/enc-nopw-cert.pem -l /var/zxid/log/mini_443.log &
-#EOF
+  sudoedit /etc/idp-start
+  #!/bin/sh
+  # 20110618, sampo@zxid.org
+  modprobe fuse
+  /usr/local/bin/encfs /var/.zxid /var/zxid     # you will need to supply password manually
+  cd /var/zxid/webroot
+  /usr/local/bin/mini_httpd -u root -p 443 -c 'zxid*' -S -E /var/zxid/idppem/enc-nopw-cert.pem -l /var/zxid/log/mini_443.log &
+  #EOF
 
-sudo chmod a+x /etc/idp-start
+  sudo chmod a+x /etc/idp-start
 
 Then just run
 
-sudo /etc/idp-start     # you will be asked for encfs password, which you must know
+  sudo /etc/idp-start     # you will be asked for encfs password, which you must know
 
 
 4.2 IdP Use of Local UID Directory (idpuid/)
